This file contains significant changes to Roundup over time.
Entries are given with the most recent entry first.
Each entry has the developer who committed the change in brackets.
Entries without name were done by Richard Jones.

2012-??-??: 1.4.21

Features:

- ...

Fixed:

- issue2550759: Trailing punctuation is no longer included when URLs are
  converted to links. (Ezio Melotti)
- issue2550574: Restore sample detectors removed in roundup 1.4.9
  (Thomas Arendsen Hein)
- Prevent AttributeError when removing all roles of a user
  (Thomas Arendsen Hein)
- issue2550762 Minor Documentation fix in doc/developers.txt, thanks
  to W. Trevor King. (Bernhard Reiter)


2012-05-15: 1.4.20

Features:

- Experimental support for the new Chameleon templating engine.
  We now have two configurable templating engines, the old Zope TAL
  templates (called zopetal in the config) and the new Chameleon (called
  chameleon in the config). A new config-option "template_engine" under
  [main] can take these config-options, the default is zopetal.
  Thanks to Cheer Xiao for the idea of making this configurable *and*
  for the actual implementation! (Ralf)
  WARNING: Chameleon support is highly experimental and *not* recommended for
  production use. It has known performance issues and i18n is not yet
  functioning. It's still under active development. Only use this feature if
  you want to experiment with Chameleon and/or help with Roundup
  developement. If you found a bug in Chameleon support, please report after
  testing against latest Roundup source from the Mercurial repository.
- issue2550678: Allow pagesize=-1 which returns all results.
  Suggested and implemented by John Kristensen.
  Tested by Satchidanand Haridas. (Bernhard)
- Allow to turn off translation of generated html options in menu method
  of LinkHTMLProperty and MultilinkHTMLProperty -- default is
  translation as it used to be (Ralf)
- Sending of OpenPGP encrypted mail to all users or selected users (via